--- a/index.html
+++ b/index.html
@@ -676,10 +676,10 @@ nav{
                 </a>
             </div>
             <h2 class="fw-bold">Get in Touch</h2>
-            <form id="contact-form">
-                <input type="text" placeholder="Your Name" required>
-                <input type="email" placeholder="Your Email" required>
-                <textarea placeholder="Your Message" rows="5" required></textarea>
+            <form id="contact-form" action="https://formspree.io/f/{your_form_id}" method="POST">
+                <input type="text" name="name" placeholder="Your Name" required>
+                <input type="email" name="email" placeholder="Your Email" required>
+                <textarea name="message" placeholder="Your Message" rows="5" required></textarea>
                 <button type="submit">Send Message</button>
             </form>
           
@@ -690,9 +690,29 @@ nav{
     <footer>
         <p>&copy; 2025 Sandhya Bonthu. All rights reserved.</p>
     </footer>
+    <script>
+        document.getElementById("contact-form").addEventListener("submit", function(event) {
+      event.preventDefault();
+
+      const formData = new FormData(this);
+
+      fetch("http://localhost:3000/send-email", {
+        method: "POST",
+        body: formData
+      })
+      .then(response => response.text())
+      .then(data => {
+        alert(data);
+      })
+      .catch(error => {
+        alert("Error: " + error);
+      });
+    });
+    </script>
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.min.js"></script>
+    <script src="server.js"></script>
 </body>
 
 </html>
