--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
   <body>
     <header>
       <nav class="navbar">
-        <h2>Bonthu Sandhya</h2>
+        <h1>Bonthu Sandhya</h1>
         <ul class="menu">
-          <li><a href="#about">About Me</a></li>
+          <li><a href="#about">About</a></li>
           <li><a href="#skills">Skills</a></li>
           <li><a href="#projects">Projects</a></li>
           <li><a href="#contact">Contact</a></li>
